[gd_scene load_steps=33 format=3 uid="uid://cshr2j6cgmwge"]

[ext_resource type="Script" uid="uid://d3xo1gyuyisis" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/Scripts/tb_fight.gd" id="1_of3kh"]
[ext_resource type="Script" uid="uid://jab2cc5gvayb" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/Scripts/tb_player_battler.gd" id="2_0bmpe"]
[ext_resource type="Script" uid="uid://b4b4oe3q5q6lf" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/Scripts/tb_sfx_player.gd" id="2_2k7w5"]
[ext_resource type="Script" uid="uid://cfby5ld8ewf8q" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/Scripts/tb_ai_battler.gd" id="3_bk830"]
[ext_resource type="Script" uid="uid://b3nepk0hw2nxb" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/planned_moves.gd" id="4_bk830"]
[ext_resource type="PackedScene" uid="uid://bwx1jq7ot3v52" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/tb_battler_sprite.tscn" id="4_euv4l"]
[ext_resource type="Script" uid="uid://bnm4714fxhlvf" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/tb_ui.gd" id="4_nrsx0"]
[ext_resource type="Shader" uid="uid://b7rujrfrknx7g" path="res://Shaders/hit_effect.gdshader" id="5_euv4l"]
[ext_resource type="Script" uid="uid://urs2q34c06m2" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/tab_bar.gd" id="5_ws8c2"]
[ext_resource type="FontFile" uid="uid://c2h2ioj5qcxdf" path="res://Assets/Fonts/Bescii-Mono.ttf" id="7_7gxsw"]
[ext_resource type="PackedScene" uid="uid://drmpyiwokjhyr" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/battler_status_bar.tscn" id="8_o8ob3"]
[ext_resource type="Script" uid="uid://0t60e0y4hub" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/battle_ended.gd" id="12_ahgua"]
[ext_resource type="Script" uid="uid://dgmoon14hmydk" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/tabs.gd" id="12_o8ob3"]
[ext_resource type="Texture2D" uid="uid://biqm226iyhlnf" path="res://Assets/Images/Icons/misc/checkmark.png" id="13_5rjq3"]
[ext_resource type="Texture2D" uid="uid://bx8g5mydb27sp" path="res://Assets/Images/Icons/misc/16x16_skull.png" id="13_o4g54"]
[ext_resource type="Texture2D" uid="uid://ckkl5netvo8e1" path="res://Assets/Images/Icons/misc/16x16_texture_not_found.png" id="17_7bk6h"]
[ext_resource type="PackedScene" uid="uid://b2jnca6d4xbes" path="res://Prefabs/UI Elements/info_box.tscn" id="17_cesjh"]
[ext_resource type="Script" uid="uid://d8rkwtgmsjxj" path="res://Scenes/Dungeon Activities/Scenes/TB Fight/TB Fight UI/Scripts/tb_info_box.gd" id="17_hosgt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2k7w5"]
resource_local_to_scene = true
shader = ExtResource("5_euv4l")
shader_parameter/enabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8a4p7"]
resource_local_to_scene = true
shader = ExtResource("5_euv4l")
shader_parameter/enabled = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dd7f8"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjhfu"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iac33"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_o8ob3"]
script/source = "extends Control

@export var player : TB_PlayerBattler = null

func _on_pressed() -> void:
	player.finish_planning()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8s5ah"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nfjw"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nfjw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_of3kh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqv0d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqv0d"]
bg_color = Color(0, 0, 0, 1)
border_width_right = 1
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws8c2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0k82"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="TBFight" type="Node" node_paths=PackedStringArray("camera")]
script = ExtResource("1_of3kh")
camera = NodePath("Camera2D")
activity_args = {
"is_boss_battle": false
}

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("2_2k7w5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Timers" type="Node" parent="."]

[node name="EndScreenTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ActionTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Battlers" type="Node" parent="."]

[node name="Enemy" type="Node" parent="Battlers" node_paths=PackedStringArray("action_timer")]
script = ExtResource("3_bk830")
action_timer = NodePath("../../Timers/ActionTimer")

[node name="Player" type="Node" parent="Battlers" node_paths=PackedStringArray("action_timer")]
script = ExtResource("2_0bmpe")
action_timer = NodePath("../../Timers/ActionTimer")

[node name="BattlerSprites" type="Node2D" parent="."]

[node name="Enemy" parent="BattlerSprites" node_paths=PackedStringArray("tracked_battler") instance=ExtResource("4_euv4l")]
material = SubResource("ShaderMaterial_2k7w5")
position = Vector2(12, 12)
tracked_battler = NodePath("../../Battlers/Enemy")

[node name="Player" parent="BattlerSprites" node_paths=PackedStringArray("tracked_battler") instance=ExtResource("4_euv4l")]
material = SubResource("ShaderMaterial_8a4p7")
position = Vector2(147, 138)
tracked_battler = NodePath("../../Battlers/Player")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true
script = ExtResource("4_nrsx0")

[node name="Control" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlannedMoves" type="Control" parent="UI/Control" node_paths=PackedStringArray("_player_battler", "_enemy_battler")]
layout_mode = 1
anchor_top = 0.833
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0599823
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_bk830")
_player_battler = NodePath("../../../Battlers/Player")
_enemy_battler = NodePath("../../../Battlers/Enemy")

[node name="Enemy" type="Control" parent="UI/Control/PlannedMoves"]
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Control/PlannedMoves/Enemy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dd7f8")

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.212
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.079998
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Control/PlannedMoves/Enemy/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/PlannedMoves/Enemy/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="Control" parent="UI/Control/PlannedMoves/Enemy"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 25.0
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Enemy/Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Enemy/Icon/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/PlannedMoves/Enemy/Icon/MarginContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("17_7bk6h")

[node name="Dead" type="TextureRect" parent="UI/Control/PlannedMoves/Enemy/Icon/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
texture = ExtResource("13_o4g54")

[node name="ColorRect" type="ColorRect" parent="UI/Control/PlannedMoves/Enemy/Icon/MarginContainer/MarginContainer/Dead"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.568627)

[node name="Panel" type="Panel" parent="UI/Control/PlannedMoves/Enemy/Icon"]
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bjhfu")

[node name="Player" type="Control" parent="UI/Control/PlannedMoves"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Control/PlannedMoves/Player"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iac33")

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.212
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.079998
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Control/PlannedMoves/Player/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/PlannedMoves/Player/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6

[node name="Icon" type="Control" parent="UI/Control/PlannedMoves/Player"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
anchors_preset = 0
anchor_left = 0.031
anchor_top = 0.167
anchor_right = 0.156
anchor_bottom = 0.833
offset_left = 0.04
offset_top = -0.0100031
offset_right = 0.039999
offset_bottom = 0.00998497

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Player/Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Confirm" type="Button" parent="UI/Control/PlannedMoves/Player/Icon/MarginContainer" node_paths=PackedStringArray("player")]
layout_mode = 2
script = SubResource("GDScript_o8ob3")
player = NodePath("../../../../../../../Battlers/Player")

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlannedMoves/Player/Icon/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control/PlannedMoves/Player/Icon/MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("13_5rjq3")

[node name="Dead" type="TextureRect" parent="UI/Control/PlannedMoves/Player/Icon/MarginContainer/MarginContainer"]
visible = false
layout_mode = 2
texture = ExtResource("13_o4g54")

[node name="ColorRect" type="ColorRect" parent="UI/Control/PlannedMoves/Player/Icon/MarginContainer/MarginContainer/Dead"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.568627)

[node name="BattleViewport" type="Control" parent="UI/Control"]
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 0.833
offset_bottom = 0.0599823

[node name="Panel" type="Panel" parent="UI/Control/BattleViewport"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8s5ah")

[node name="EnemyStatusBar" parent="UI/Control/BattleViewport" node_paths=PackedStringArray("tracked_battler") instance=ExtResource("8_o8ob3")]
offset_left = 38.0
offset_top = 2.0
offset_right = 158.0
offset_bottom = 22.0
left_aligned_status_effects = false
tracked_battler = NodePath("../../../../Battlers/Enemy")

[node name="PlayerStatusBar" parent="UI/Control/BattleViewport" node_paths=PackedStringArray("tracked_battler") instance=ExtResource("8_o8ob3")]
offset_left = 2.0
offset_top = 128.0
offset_right = 122.0
offset_bottom = 148.0
elevated_status_effects = true
tracked_battler = NodePath("../../../../Battlers/Player")

[node name="PlayerOptions" type="Control" parent="UI/Control"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.833
offset_bottom = 0.0599823
grow_horizontal = 2

[node name="Panel" type="Panel" parent="UI/Control/PlayerOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2nfjw")

[node name="TabBar" type="Control" parent="UI/Control/PlayerOptions"]
layout_mode = 1
anchor_left = 0.012
anchor_top = 0.013
anchor_right = 0.987
anchor_bottom = 0.14
offset_left = 0.0799999
offset_top = 0.05
offset_right = 0.0799866
script = ExtResource("5_ws8c2")

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PlayerOptions/TabBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/PlayerOptions/TabBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Moves" type="Button" parent="UI/Control/PlayerOptions/TabBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../Items")
focus_next = NodePath("../Items")
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_fonts/font = ExtResource("7_7gxsw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_2nfjw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_of3kh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_oqv0d")
theme_override_styles/normal = SubResource("StyleBoxFlat_oqv0d")
disabled = true
text = "Moves"
icon = ExtResource("17_7bk6h")

[node name="Items" type="Button" parent="UI/Control/PlayerOptions/TabBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Moves")
focus_previous = NodePath("../Moves")
focus_mode = 0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_fonts/font = ExtResource("7_7gxsw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_2nfjw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_of3kh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_oqv0d")
theme_override_styles/normal = SubResource("StyleBoxFlat_ws8c2")
text = "Items"
icon = ExtResource("17_7bk6h")
icon_alignment = 2

[node name="Tabs" type="MarginContainer" parent="UI/Control/PlayerOptions" node_paths=PackedStringArray("_player_confirm_button", "_player_battler")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.14
anchor_right = 0.987
anchor_bottom = 0.987
offset_left = 0.0799999
offset_right = 0.0799866
offset_bottom = -0.0499878
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 1
script = ExtResource("12_o8ob3")
_player_confirm_button = NodePath("../../PlannedMoves/Player/Icon/MarginContainer/Confirm")
_player_battler = NodePath("../../../../Battlers/Player")

[node name="Moves" type="Control" parent="UI/Control/PlayerOptions/Tabs"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Control/PlayerOptions/Tabs/Moves"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/PlayerOptions/Tabs/Moves/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Items" type="Control" parent="UI/Control/PlayerOptions/Tabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Control/PlayerOptions/Tabs/Items"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/PlayerOptions/Tabs/Items/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoBox" parent="UI/Control" instance=ExtResource("17_cesjh")]
layout_mode = 1
anchor_left = 0.019
anchor_top = 0.033
anchor_right = 0.481
anchor_bottom = 0.8
offset_left = -0.0800004
offset_top = 0.0599999
offset_right = 0.0799866
script = ExtResource("17_hosgt")
visibility_transition_time = 0.1

[node name="BattleEnded" type="Control" parent="UI"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_ahgua")

[node name="CenterContainer" type="CenterContainer" parent="UI/BattleEnded"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 315.0
offset_bottom = 175.0

[node name="Panel" type="Panel" parent="UI/BattleEnded/CenterContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j0k82")

[node name="GoldGain" type="Label" parent="UI/BattleEnded/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "xp:100"

[node name="BattleResult" type="Label" parent="UI/BattleEnded/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -8.0
offset_right = 88.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Battle Won!"

[connection signal="timeout" from="Timers/EndScreenTimer" to="." method="_on_end_screen_timer_timeout"]
[connection signal="timeout" from="Timers/ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="pressed" from="UI/Control/PlannedMoves/Player/Icon/MarginContainer/Confirm" to="UI/Control/PlannedMoves/Player/Icon/MarginContainer/Confirm" method="_on_pressed"]
[connection signal="pressed" from="UI/Control/PlayerOptions/TabBar/MarginContainer/HBoxContainer/Moves" to="UI/Control/PlayerOptions/TabBar" method="_on_moves_pressed"]
[connection signal="pressed" from="UI/Control/PlayerOptions/TabBar/MarginContainer/HBoxContainer/Items" to="UI/Control/PlayerOptions/TabBar" method="_on_items_pressed"]
